--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Homework 10</title>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <select class="breed-select">
+      <option class="option-select">123</option>
+    </select>
+    <p class="loader">Loading data, please wait...</p>
+    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+
+    <div class="cat-info">
+      <img id="cat-image" src="#" alt="Cat">
+
+      <div id="cat-details">
+        <h2 id="cat-breed"></h2>
+        <p id="cat-description"></p>
+        <p id="cat-temperament"></p>
+
+    </div>
+
+    <script src="index.js" type="module"></script>
+    <script src="cat-api.js"type="module"></script>
   </body>
 </html>
