--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,31 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <select class="breed-select">
-      <option class="option-select">123</option>
-    </select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+    <h1></h1>
 
-    <div class="cat-info">
-      <img id="cat-image" src="#" alt="Cat">
-
-      <div id="cat-details">
-        <h2 id="cat-breed"></h2>
-        <p id="cat-description"></p>
-        <p id="cat-temperament"></p>
-
+    <div class="container">
+      <div class="loader">
+        <p>Loading...</p>
+      </div>
+  
+      <div class="error">
+        <p>An error occurred. Please try again.</p>
+      </div>
+  
+      <div class="form">
+        <label for="breed-select">Select a breed:</label>
+        <select id="breed-select"></select>
+      </div>
+  
+      <div class="cat-info">
+        <img id="cat-image" src="#" alt="Cat">
+  
+        <div id="cat-details">
+          <h2 id="cat-breed"></h2>
+          <p id="cat-description"></p>
+          <p id="cat-temperament"></p>
+        </div>
+      </div>
     </div>
 
     <script src="index.js" type="module"></script>
