--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
-  </head>
-  <body>
-    <h1></h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cats</title>
+  <!-- <link rel="stylesheet" href="styles.css"> -->
+</head>
+<body>
+  <h1>Cats</h1>
 
-    <div class="container">
-      <div class="loader">
-        <p>Loading...</p>
-      </div>
-  
-      <div class="error">
-        <p>An error occurred. Please try again.</p>
-      </div>
-  
-      <div class="form">
-        <label for="breed-select">Select a breed:</label>
-        <select id="breed-select"></select>
-      </div>
-  
-      <div class="cat-info">
-        <img id="cat-image" src="#" alt="Cat">
-  
-        <div id="cat-details">
-          <h2 id="cat-breed"></h2>
-          <p id="cat-description"></p>
-          <p id="cat-temperament"></p>
-        </div>
-      </div>
+  <div class="container">
+    <div class="loader">
+      <p>Loading...</p>
     </div>
 
-    <script src="index.js" type="module"></script>
-    <script src="cat-api.js"type="module"></script>
-  </body>
+    <div class="error">
+      <p>An error occurred. Please try again.</p>
+    </div>
+
+    <div class="form">
+      <label for="breed-select">Select a breed:</label>
+      <select id="breed-select"></select>
+    </div>
+
+    <div class="cat-info">
+      <img id="cat-image" src="#" alt="Cat">
+
+      <div id="cat-details">
+        <h2 id="cat-breed"></h2>
+        <p id="cat-description"></p>
+        <p id="cat-temperament"></p>
+      </div>
+    </div>
+  </div>
+
+  <script src="cat-api.js" type="module"></script>
+  <script src="index.js" type="module"></script>
+
+</body>
 </html>
+
+
