add finish version

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cats</title>
-  <!-- <link rel="stylesheet" href="styles.css"> -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Cats</h1>
-
   <div class="container">
+     <h1>Cats</h1>
     <div class="loader">
       <p>Loading...</p>
     </div>
@@ -23,8 +22,8 @@
       <select id="breed-select"></select>
     </div>
 
-    <div class="cat-info">
-      <img id="cat-image" src="#" alt="Cat">
+    <div class="cat-info" id="cat-info">
+      <img width=300 id="cat-image" src="#" alt="Cat ">
 
       <div id="cat-details">
         <h2 id="cat-breed"></h2>
