--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,19 @@
       <p>An error occurred. Please try again.</p>
     </div>
 
-    <div class="form">
+    <form class="form">
       <label for="breed-select">Select a breed:</label>
       <select id="breed-select"></select>
-    </div>
+    </form>
 
     <div class="cat-info" id="cat-info">
-      <img width=300 id="cat-image" src="#" alt="Cat ">
+      <!-- <img width=300 class="cat-image"  id="cat-image" src="#" alt="Cat ">
 
       <div id="cat-details">
         <h2 id="cat-breed"></h2>
         <p id="cat-description"></p>
         <p id="cat-temperament"></p>
-      </div>
+      </div> -->
     </div>
   </div>
 
