--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-     <h1>Cats</h1>
+     <!-- <h1>Cats</h1> -->
     <div class="loader">
       <p>Loading...</p>
     </div>
